# playground

./: .gitignore  README.adoc  README.md
cpp/: CMakeLists.txt  Makefile  README.adoc
cpp/cmake/: macros.cmake
cpp/design-pattern/: README.adoc
cpp/games/: CMakeLists.txt  README.adoc
cpp/games/hello/: CMakeLists.txt  hello.cpp
cpp/games/hello-extended/: CMakeLists.txt  hello-extended.cpp
cpp/modules/: bigint.cpp  bigint.h
cpp/unittest/: CMakeLists.txt  README.adoc
cpp/unittest/01-first-test/: CMakeLists.txt  does-gtest-work.cpp
cpp/unittest/02-bigint/: CMakeLists.txt  test-bigint.cpp
llvm-games/: README.adoc
llvm-games/RTT/: CMakeLists.txt  Makefile  README.adoc  arm-none-eabi-clang.cmake  main-0-rtt-printf.cpp  main-1-rtt-picolib-stdio.cpp  main-2-librtt.cpp  main.cpp
llvm-games/RTT/SEGGER/: CMakeLists.txt
llvm-games/RTT/SEGGER/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
llvm-games/SystemView/: CMakeLists.txt  Makefile  README.adoc  main.c
llvm-games/SystemView/SEGGER/: CMakeLists.txt
llvm-games/SystemView/SEGGER/Sysview/: SEGGER_SYSVIEW_ConfDefaults.h
llvm-games/SystemView/system/: nrf52840.ld
llvm-games/SystemView/system/nordic/: compiler_abstraction.h  nrf52840.h  nrf52840_bitfields.h  nrf52_erratas.h
llvm-games/attributes/: CMakeLists.txt  Makefile  README.adoc  main.c
llvm-games/attributes/SEGGER/: CMakeLists.txt
llvm-games/attributes/system/: arm-none-eabi-clang.cmake  arm-none-eabi.cmake  gcc_startup_nrf52840.S  nrf52840-clang.ld  nrf52840-gcc.ld  nrf52840-original.ld  startup_nrf52840.S
llvm-games/boilerplate/: README.adoc
llvm-games/boilerplate/arm-cortex/: CMakeLists.txt  Makefile  README.adoc  main.cpp  nrf52840.ld
llvm-games/boilerplate/rp2040/: CMakeLists.txt  Makefile  README.adoc  main.cpp  pico_sdk_import.cmake
llvm-games/broken-lto/: Makefile  README.adoc  link-lld.ld  link.ld  main.c  mod.c  mod.h
llvm-games/build-llvm/: README.adoc
llvm-games/const-variables/: Makefile  README.adoc  main.c
llvm-games/const-variables/system/: arm-none-eabi.cmake
llvm-games/profiling/: CMakeLists.txt  Makefile  README.adoc  main.c  main.cpp  nrf52840.ld
llvm-games/profiling/profiling/: CMakeLists.txt  InstrProfilingFileOther.c  InstrProfilingFileSemihosting.c  InstrProfilingPlatformOther.c
llvm-games/register-access/: CMakeLists.txt  Makefile  README.adoc  main.cpp
llvm-games/semihosting/: README.adoc
llvm-games/xray/: CMakeLists.txt  README.adoc  main.c  nrf52840.ld
python/palindrome/: palindrome-checker.py  palindrome-checker2.py  palindrome-checker3.py
rp2040/: Makefile  about.adoc
sw-craft-2024/: README.adoc
sw-craft-2024/game-of-life/: .gitignore  CMakeLists.txt  README.adoc  TLife.cpp  TLife.h  TLifeFaster.cpp  TLifeFaster.h  TLifeFasterMulti.cpp  TLifeFasterMulti.h  TLife_Tests.cpp
sw-craft-2024/roman-numerals/: TRomans.cpp  TRomans.h  TRomans_Tests.cpp
tools/: README.adoc
tools/SystemView/: CMakeLists.txt  Makefile  README.adoc  arm-none-eabi-clang.cmake  main.c  nrf52840.ld
tools/SystemView/SEGGER/: CMakeLists.txt
tools/SystemView/SEGGER/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
tools/SystemView/system/: gcc_startup_nrf52840.S  nrf52840.ld
tools/SystemView/system/nordic/: nrf.h  nrf51_to_nrf52840.h  nrf52840.h  nrf52_erratas.h  nrf52_to_nrf52840.h  nrf_peripherals.h  system_nrf52.c  system_nrf52840.c  system_nrf52_approtect.h
tools/build-llvm/: Makefile  README.adoc
tools/pyocd/: README.adoc  ex_breakpoint.py  ex_hello_world.py  ex_semihosting.py
tools/xray/: CMakeLists.txt  README.adoc  main.c
